fix flawed reflow logic for empty table cells bug 226637 r/sr=bzbarsky